<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.details.DetailsActivity">

    <android.support.constraint.ConstraintLayout android:id="@+id/content_view" android:layout_width="match_parent"
                                                 android:layout_height="match_parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/song_details_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" tools:text="Title"
                app:layout_constraintTop_toBottomOf="@+id/song_details_artwork" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/song_details_album"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/song_details_album" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/song_details_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" tools:text="Album" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/song_details_artist"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/song_details_artist" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/song_details_album" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" tools:text="Artist" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/song_details_play_pause"/>
        <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/song_details_next" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/baseline_skip_next_24"
                app:layout_constraintStart_toEndOf="@+id/song_details_play_pause"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="@+id/song_details_play_pause"
                app:layout_constraintVertical_bias="0.0"/>
        <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/song_details_previous" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/baseline_skip_previous_24" app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/song_details_play_pause"
                app:layout_constraintTop_toTopOf="@+id/song_details_play_pause"
                app:layout_constraintVertical_bias="0.0"/>
        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="?attr/actionModeShareDrawable"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:id="@+id/song_details_share" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/song_details_artwork" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="64dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="64dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintBottom_toTopOf="@+id/song_details_title"/>
        <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/song_details_play_pause"
                app:layout_constraintStart_toEndOf="@+id/song_details_previous" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/song_details_next" android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/baseline_play_arrow_24"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/song_details_artist"/>
    </android.support.constraint.ConstraintLayout>


    <include
            android:id="@+id/error_view"
            layout="@layout/view_error"
            android:visibility="gone"/>

</FrameLayout>