<resources>
    <string name="app_name">iTunesSample</string>
    <string name="search_hint">eg: Michael Jackson</string>
    <string name="search_title">Search here</string>
    <string name="sort_title">Sort</string>
    <string name="price">Price</string>
    <string name="genre">Genre</string>
    <string name="song_length">Song Length</string>
    <string name="error_header">Opps</string>
    <string name="error_description">There was an error</string>
    <string name="empty_message">Looks like you found the end of the internet.\n
        Please try another search phrase.
    </string>
    <string name="welcome_description">Hello there! \n You can start browsing the song library by using the search icon
        up
        there.
    </string>
    <string name="share_message">Hey check out this song: %1$s - %2$s</string>
    <string name="price_with_holders">%1$.2f %2$s</string>
</resources>
